# ese5190-lab2b-10Parts

./: README.md
ese5190-lab2b-Part10/: README.md
ese5190-lab2b-Part2/: README.md
ese5190-lab2b-Part2/02_repl/: CMakeLists.txt
ese5190-lab2b-Part3/: README.md
ese5190-lab2b-Part3-main/03_sequencer/: repl.c  repl.h
ese5190-lab2b-Part3/03_sequencer/: CMakeLists.txt  sequencer.c
ese5190-lab2b-Part3/03_sequencer/Python serial/: Sequencer.py
ese5190-lab2b-Part4/: README.md
ese5190-lab2b-Part4-main/04_slow motion/: CMakeLists.txt
ese5190-lab2b-Part4/04_slow motion/: slow_motion.c
ese5190-lab2b-Part6-main/: README.md
ese5190-lab2b-Part7-main/: README.md
ese5190-lab2b-Part7-main/07_pio_sequencer/: logic_analyzer.c
ese5190-lab2b-Part7/07_pio_sequencer/: CMakeLists.txt  pio_sequencer.c
ese5190-lab2b-Part8/: README.md
ese5190-lab2b-Part8/08_adps_protocol/: CMakeLists.txt
ese5190-lab2b-Part9/: README.md
ese5190-lab2b-Part9/09_lab_on_a_chip/: APDS9960.c  CMakeLists.txt  pio_i2c.c  readme.md  ws2812.c
